AoC, Java - bump Java to 21 and Gradle to 8.4