@@ -1,6 +1,6 @@
 plugins {
     id 'application'
-    id 'io.freefair.lombok' version '6.1.0'
+    id 'io.freefair.lombok' version '8.4'
 }
 
 repositories {
@@ -8,14 +8,14 @@ repositories {
 }
 
 dependencies {
-    implementation 'info.picocli:picocli:4.6.1'
+    implementation 'info.picocli:picocli:4.7.5'
 
     // https://mvnrepository.com/artifact/com.google.dagger/dagger
     implementation 'com.google.dagger:dagger:2.37'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.37'
 
     // https://mvnrepository.com/artifact/org.springframework/spring-context
-    implementation 'org.springframework:spring-context:5.3.10'
+    implementation 'org.springframework:spring-context:6.1.1'
 
     // https://mvnrepository.com/artifact/io.vavr/vavr
     implementation 'io.vavr:vavr:0.10.4'
@@ -34,8 +34,11 @@ dependencies {
     testImplementation 'com.tngtech.archunit:archunit-junit5:0.21.0'
 }
 
-sourceCompatibility = 16
-targetCompatibility = 16
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
+}
 
 application {
     mainClass = 'elohhim.aoc.AoCApp'
@@ -44,3 +47,18 @@ application {
 test {
     useJUnitPlatform()
 }
+
+
+
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += "--enable-preview"
+}
+
+tasks.withType(Test).configureEach {
+    jvmArgs += "--enable-preview"
+}
+
+tasks.withType(JavaExec).configureEach {
+    jvmArgs += "--enable-preview"
+}
+
